--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -19,4 +19,4 @@ jobs:
                   username: ${{ secrets.SSH_USER }}
                   password: ${{ secrets.SSH_PASSWORD }}
                   port: ${{ secrets.SSH_PORT }}
-                  script: cd ~/RR-WEB && docker build . -t rr-web && systemctl restart docker && docker run -p 3000:80 -d rr-web
+                  script: cd ~/RR-WEB && git pull && docker build . -t rr-web && systemctl restart docker && docker run -p 3000:80 -d rr-web
